2.0.0-beta02
- New: Almost all stock settings are available now (#395)
- Improved: Debugging settings page was cleaned up
- Improved: Updated translations
- Fixed: Crash on startup with some servers (#407)
- Fixed: Pressing 'done' on keyboard in amount field always starts quick mode (#410)

2.0.0-beta01
- New: 'Purchase' actions on shopping list page are working again (#401)
- New: It is now possible to purchase only done shopping list items (#221)
- New: 'Add to shopping list' action on stock overview page is working again
- New: Quantity unit page now has field for plural forms if necessary (#348)
- Improved: 'Add shopping list item' page now has a better workflow
- Improved: Quick mode behavior now is better for amount field of forms
- Improved: Now you can add inventory and transfer page as shortcuts
- Improved: Display a warning if stock feature is disabled (#139)
- Improved: Actions in product overview bottom sheet are more reachable
- Improved: Few design tweaks on product overview sheet and in shopping mode
- Improved: Hide quantity unit field on shopping list item page if there is only one
- Improved: Add toggle in settings to reduce app startup time (disables logo animation)
- Improved: Stock overview and shopping list layout on tablets in portrait mode
- Improved: Updated translations
- Fixed: Menus were not displayed after first app start (#365)
- Fixed: Inactive products now cannot be added to shopping list (#398)
- Fixed: Swipe items wasn't possible after going back to shopping list or stock
- Fixed: Due date was always mandatory on inventory page (#400)
- Fixed: White icons on white navigation bar with SDK 21-25 (#366)
- Fixed: Plurals in languages with multiple plurals (#348)
- Fixed: Show opened aggregated amount in stock overview if necessary
- Fixed: Conscrypt implementation was wrong, now it should work (#163)

2.0.0-alpha07
- New: Transfer page and inventory page (finally!) (#385 and #115)